- hid breadcrumbs and 'this weeks progress' when on mobile view - made header fixed on mobile view

--- a/css/base.css
+++ b/css/base.css
@@ -24,6 +24,12 @@ h5 {
   padding-right: 0;
 }
 
+.navbar-default {
+  position: fixed;
+  background-color: #efefef;
+  width: 100%;
+}
+
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover {
   background-color: #ccc;
   color: #444;
@@ -32,7 +38,6 @@ h5 {
 .navbar-default .navbar-nav>li>a:hover {
   color: #444;
 }
-
 
 .navbar-static-top {
   border-width: 0 0 1px;
@@ -45,7 +50,6 @@ h5 {
   height: 50px;
   background-size: 100%;
   margin-right: 50px;
-
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -71,6 +75,10 @@ h5 {
 
 .navbar-default .navbar-toggle:hover .icon-bar {
   background-color: #444;
+}
+
+#content {
+  padding: 60px 0px 0px 0px;
 }
 
 /* header style */
@@ -186,5 +194,10 @@ h5 {
 
   .navbar-default .navbar-brand {
     margin-left: 45%;
+  }
+
+  #breadcrumb,
+  #progress {
+    display: none;
   }
 }
